--- a/locales/noi.lang.json
+++ b/locales/noi.lang.json
@@ -4,7 +4,7 @@
   "locales": [
     { "code": "en", "label": "English" },
     { "code": "zh", "label": "简体中文" },
-    { "code": "zh-TW", "label": "繁體中文" },
+    { "code": "zh_Hant", "label": "繁體中文" },
     { "code": "ja", "label": "日本語" },
     { "code": "ko", "label": "한국어" },
     { "code": "fr", "label": "Français" },
