--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -22,8 +22,8 @@
     "showSidebar": "Показать боковую панель",
     "hideSidebar": "Скрыть боковую панель",
     "devTools": "Инструменты разработчика",
-    "frosted_texture": "Матовая текстура",
-    "x_quit": "Нажмите [X], чтобы выйти",
+    "frostedTexture": "Матовая текстура",
+    "xQuit": "Нажмите [X], чтобы выйти",
 
     "edit": "Редактировать",
     "undo": "Отменить",
@@ -100,6 +100,42 @@
       "try": "Попробуйте:",
       "check_1": "Проверить соединение",
       "check_2": "Проверить прокси и фаервол"
+    }
+  },
+  "settings": {
+    "menu": {
+      "general": "Основные",
+      "extensions": "Расширения",
+      "prompts": {
+        "name": "Подсказки",
+        "userPrompts": "Пользовательские подсказки",
+        "promptTags": "Теги подсказок",
+        "customSync": "Настройка синхронизации"
+      }
+    },
+    "confirm": {
+      "batch": {
+        "use": "Вы уверены, что хотите использовать эти подсказки?",
+        "delete": "Вы уверены, что хотите удалить эти подсказки?",
+        "disable": "Вы уверены, что хотите отключить эти подсказки?",
+        "enable": "Вы уверены, что хотите включить эти подсказки?"
+      }
+    },
+    "message": {
+      "add": "Добавлено",
+      "sync": "Синхронизировано",
+      "invalidData": "Неверные данные",
+      "missingActAndPrompt": "Отсутствуют поля: 'act', 'prompt'. Используйте 'Alias' для переименования."
+    },
+    "table": {
+      "name": "Имя",
+      "sync": "Синхронизация",
+      "description": "Описание",
+      "tag": "Тег",
+      "action": "Действие",
+      "color": "Цвет",
+      "lastUpdate": "Последнее обновление",
+      "usageCount": "Количество использований"
     }
   }
 }
