--- a/locales/noi.lang.json
+++ b/locales/noi.lang.json
@@ -12,6 +12,7 @@
     { "code": "pt", "label": "Português" },
     { "code": "ru", "label": "Русский" },
     { "code": "de", "label": "Deutsch" },
+    { "code": "hu", "label": "Magyar" },
     { "code": "it", "label": "Italiano" },
     { "code": "tr", "label": "Türkçe" }
   ]
